--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "firebase": "^11.6.1",
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
