Refactor project structure: update requirements, clean up utils, and implement background scheduler for Neo4j connection

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,10 @@ python-dotenv
 tqdm
 fastapi
 uvicorn[standard]
-python-dotenv
 gunicorn
 langchain-neo4j
 neo4j
 PyMuPDF
 pypdf
 langchain-unstructured
-markitdown[all]
-pdfplumber
+APScheduler
