--- a/azure_pipelines.yml
+++ b/azure_pipelines.yml
@@ -20,7 +20,7 @@ stages:
         command: buildAndPush
         repository: $(imageName)
         dockerfile: '**/Dockerfile'
-        containerRegistry: 'azure-aks-connection'
+        containerRegistry: 'simoneacr-connection'
         tags: latest
 
 - stage: Deploy
@@ -36,7 +36,7 @@ stages:
       inputs:
         connectionType: 'Azure Resource Manager'
         azureSubscription: 'azure-aks-connection'
-        azureSubscriptionEndpoint: 'azure-aks-connection'
+        azureSubscriptionEndpoint: 'azure-aks-arm-connection'
         azureResourceGroup: 'pocs_abozar_simone_rg'
         kubernetesCluster: 'k8s-cluster'
         namespace: 'default'
