--- a/azure_pipelines.yml
+++ b/azure_pipelines.yml
@@ -43,4 +43,4 @@ stages:
         namespace: 'default'
         command: apply
         useConfigurationFile: true
-        configuration: 'askmycv-deployment.yaml, askmycv-service.yaml, askmycv-ingress.yaml'
+        configuration: '**/askmycv-*.yaml'
