--- a/azure_pipelines.yml
+++ b/azure_pipelines.yml
@@ -60,8 +60,8 @@ stages:
             displayName: Create imagePullSecret
             inputs:
               action: createSecret
-              connectionType: kubernetesServiceConnection
-              kubernetesServiceConnection: '$(kubernetesServiceConnection)'
+              connectionType: azureResourceManager
+              azureSubscriptionEndpoint: '$(kubernetesServiceConnection)'
               secretType: dockerRegistry
               secretName: '$(imagePullSecret)'
               dockerRegistryEndpoint: '$(dockerRegistryServiceConnection)'
@@ -71,8 +71,8 @@ stages:
             displayName: Deploy to AKS
             inputs:
               action: deploy
-              connectionType: kubernetesServiceConnection
-              kubernetesServiceConnection: '$(kubernetesServiceConnection)'
+              connectionType: azureResourceManager
+              azureSubscriptionEndpoint: '$(kubernetesServiceConnection)'
               manifests: |
                 $(Pipeline.Workspace)/manifests/deployment.yaml
                 $(Pipeline.Workspace)/manifests/service.yaml
