--- a/azure_pipelines.yml
+++ b/azure_pipelines.yml
@@ -58,6 +58,16 @@ stages:
       runOnce:
         deploy:
           steps:
+          - task: replacetokens@5
+            displayName: 'Replace image tag token'
+            inputs:
+              targetFiles: '$(Pipeline.Workspace)/manifests/deployment.yml'
+              encoding: 'auto'
+              tokenPattern: 'custom'
+              tokenPrefix: '__'
+              tokenSuffix: '__'
+              writeBOM: true
+              
           - task: KubernetesManifest@0
             displayName: Create imagePullSecret
             inputs:
