--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: askmycv
-        image: simoneacr.azurecr.io/askmycv:__IMAGE_TAG__
+        image: simoneacr.azurecr.io/askmycv:latest
         ports:
         - containerPort: 5005
         env:
